--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
     "bot",
     "Remove Bg",
   ],
-  "repository": "https://github.com/MrBotDeveloper/Removebg-Bot",
-  "website": "https://mrbotdeveloper.github.io/Removebg-Bot/",
+  "repository": "https://github.com/MrBotDeveloper/RemoveBg-Bot",
+  "website": "https://mrbotdeveloper.github.io/RemoveBg-Bot/",
   "success_url": "#TODO",
   "env": {
     "ENV": {
@@ -42,9 +42,6 @@
     }
   },
   "addons": [{
-    "plan": "heroku-postgresql",
-    "options": {
-      "version": "12"
     }
   }],
   "buildpacks": [{
