--- a/app.json
+++ b/app.json
@@ -41,8 +41,7 @@
       "required": false
     }
   },
-  "addons": [{
-    }
+  "addons": [
   ],
   "buildpacks": [{
     "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
