--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,12 @@
-telethon
-setuptools
-wheel
-aiofiles
 aiohttp
-asyncurban
 beautifulsoup4
-cairosvg
-cfscrape
-coffeehouse
-colour
-covid
-cowpy
-cryptg
-csvfaker
-DateTime
-fontTools
-python-dotenv
-emoji
-https://github.com/prgofficial/pyrogram/archive/asyncio-dev.zip
-fonttools
-geopy
-gitpython
-glitch_this
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-googletrans==3.1.0a0
-gsearch
-gtts
+git+git://github.com/google/chatbase-python.git
 hachoir
-heroku3
-html-telegraph-poster
-humanize
-jotquote
-justwatch
-kwot
-lottie
-lxml
-lyricsgenius
-nekos.py
-patool
+numpy
 Pillow
-prettytable
-programmingquotes
-psutil
-psycopg2
-PyDictionary
-pyfiglet
-PyGithub
-pylast
-PyLyrics
-pymediainfo
-pySmartDL
-python-barcode
-pytuneteller
-pytz
-qrcode
-regex
+pyrogram
 requests
-search-engine-parser
-selenium
-spamwatch
-speedtest-cli
+tgcrypto
 sqlalchemy
-telegraph
-tswift
-validators
-vcsi
-wand
-wikipedia
-youtube_dl > 2020.11.12
+psycopg2-binary
+olefile
