--- a/app.json
+++ b/app.json
@@ -44,9 +44,9 @@
    "addons":[
       
    ],
-   "buildpacks":[
-      {
-         "url":"https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-      }
-   ]
+   "buildpacks": [{
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }, {
+    "url": "heroku/python"
+  }],
 }
