--- a/app.json
+++ b/app.json
@@ -41,10 +41,9 @@
          "required":false
       }
    },
-   "addons":[
-      
-   ],
-   "buildpacks": [{
-    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-  }],
+    "addons": [],
+    "buildpacks": [
+        {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"},
+        {"url": "heroku/python"}
+    ],,
 }
