--- a/app.json
+++ b/app.json
@@ -41,4 +41,9 @@
          "required":false
       }
    },
+   "buildpacks": [{
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }, {
+    "url": "heroku/python"
+  }],
 }
