--- a/app.json
+++ b/app.json
@@ -5,3 +5,7 @@
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["ne", "ex", "ji"]
 }
+"buildpacks": [{
+  https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git
+  }]
+}
