--- a/app.json
+++ b/app.json
@@ -4,6 +4,8 @@
   "repository": "https://github.com/Technical-Jigar/new74/new/main",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["ne", "ex", "ji"]
-},
-"buildpacks": [{ "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest" }]
+}
+ "buildpacks": [{ 
+   "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest" 
+ }]
 }
